# inspirational-quotes

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
inspirational-quotes/: inspirational_quotes.py
inspirational_quotes/: __init__.py  example.py  inspirational_quotes.py
inspirational_quotes/quotes/: quotes.json
inspirational_quotes/tests/: test.py
